<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trabalho6_Fragments</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="fragment_a">F1</string>
    <string name="fragment_b">F2</string>
    <string name="title_activity_my">Activity - 1</string>
    <string name="title_activity_my_activity2">Activity - 2</string>
    <string name="bt_func_0">Função 0</string>
    <string name="bt_func_1">Função 1</string>
    <string name="bt_func_2">Função 2</string>
    <string name="bt_func_3">Função 3</string>
    <string name="bt_func_4">Função 4</string>
    <string name="bt_func_5">Função 5</string>

</resources>
