<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#7bae16"
    android:orientation="vertical">

    <Button
        android:id="@+id/bt_func_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:shadowDx="@android:integer/config_mediumAnimTime"
        android:shadowRadius="@android:integer/config_mediumAnimTime"
        android:textColor="@android:color/primary_text_dark"
        android:text="@string/bt_func_0"/>

    <Button
        android:id="@+id/bt_func_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@android:color/primary_text_dark"
        android:text="@string/bt_func_1"/>

    <Button
        android:id="@+id/bt_func_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@android:color/primary_text_dark"
        android:text="@string/bt_func_2"/>

    <Button
        android:id="@+id/bt_func_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@android:color/primary_text_dark"
        android:text="@string/bt_func_3"/>

    <Button
        android:id="@+id/bt_func_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@android:color/primary_text_dark"
        android:text="@string/bt_func_4"/>

    <Button
        android:id="@+id/bt_func_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@android:color/primary_text_dark"
        android:text="@string/bt_func_5"/>

    <TextView
        android:id="@+id/tv_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_b"
        android:layout_gravity="bottom|right"
        android:textColor="#fff"
        android:textSize="15sp"/>


</LinearLayout>
